force-app/main/default/objects/Quiz__c/fields/Number_of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Questions__c</fullName>
    <label>Number of Questions</label>
    <summaryForeignKey>Quiz_Line_Item__c.Quiz__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>