force-app/main/default/objects/Quiz__c/fields/Quiz_Category__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Category__c</fullName>
    <label>Quiz Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QuizCategory</valueSetName>
    </valueSet>
</CustomField>