force-app/main/default/objects/Quiz__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quiz_Category__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Published__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>